# warc-bench

./: .gitignore  CLEANUP_GUIDE.md  MANIFEST.in  MONOREPO_SETUP_COMPLETE.md  PUBLISHING.md  README.md  SETUP_AND_TESTING.md  custom_build.py  pyproject.toml  requirements.txt  setup.py  table.html
docs/: GITHUB_PAGES_SETUP.md  _config.yml  index.html  style.css
prompt_template_manager/: __init__.py  template.py  utils.py
protos/: action_data.proto
scripts/: analyze_task_types.py  dev_set_statistics.txt  dev_set_task_type_to_ids_mapping.csv  generate_benchmark_json.py  goal_filtering.py  goal_post_process.ipynb  output.json  playwright_example.py  run_eval.py  test_imports.py  webreplay_server_check.py
scripts/csvs/: tasks_05222025.csv
scripts/csvs/online/: tasks_dev_08202025.csv  tasks_test_09152025.csv  tasks_test_09152025_2.csv  tasks_test_09152025_3.csv  tasks_train_09102025.csv
scripts/eval_configs/: action_crawl_agent.yaml  example_deterministic_run.yaml  sanity_check.yaml  subtask.yaml
src/: __init__.py
src/orby/: __init__.py
src/orby/digitalagent/: README.md
src/orby/digitalagent/actions/: base.py  browsergym_actions.py  claude_cua_actions.py
src/orby/digitalagent/agent/: __init__.py  action_crawl_agent.py  agent.py  basic_agent.py  basic_cot_agent.py  basic_stateless_agent.py  browsergym_agent_wrapper.py  claude_cua.py  hierarchical_stateless_agent.py  hierarchical_stateless_multi_agent.py  hsm_v2_agent.py  hsm_v3_agent.py  hsm_v4_agent.py  replay_sva_v3.py  subtask_hybrid_agent_v1.py  subtask_vision_agent_v1.py  sva_v2.py  sva_v3.py  sva_v4.py  unified_v1_agent.py  unified_v2_agent.py  utils.py
src/orby/digitalagent/configs/: webarena_easy.py  webarena_lite.py  workarena.py
src/orby/digitalagent/evaluation/: eval_config.py  (+4 more)
src/orby/protos/: __init__.py  action_data.proto
src/orby/subtask_benchmark/: __init__.py
src/orby/trajectory_collector/: README.md  single_task_trajectory_collector.py  task_completion_verifier.py
website/: index.html
(+1426 files in other folders)
