[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orby-web-agent"
version = "0.1.0"
description = "Web agent framework using WARC file servers and BrowserGym environments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Orby Team"}
]

dependencies = [
    # Core dependencies
    "playwright>=1.48.0",
    "openai==1.55.3",
    "anthropic==0.40.0",

    # BrowserGym and related
    "browsergym~=0.13.3",
    "browsergym-miniwob~=0.13.3",
    "browsergym-visualwebarena~=0.13.3",
    "browsergym-webarena~=0.13.3",
    "browsergym-workarena~=0.4.1",

    # API and Web
    "fastapi==0.115.4",
    "httpx==0.27.2",
    "Authlib==1.4.0",

    # Cloud and Storage
    "boto3==1.34.*",
    "google-cloud-storage~=2.18.2",
    "smart-open==7.1.0",

    # ML and Data Processing
    "torch==2.3.1",
    "transformers==4.46.2",
    "tokenizers>=0.20,<0.21",
    "numpy>=1.17",
    "pandas~=2.2.2",
    "opencv-python~=4.10.0",

    # NLP
    "nltk~=3.8.1",

    # Utilities
    "fire==0.6.0",
    "python-dotenv~=1.0.1",
    "retry~=0.9.2",
    "cdifflib~=1.2.6",
    "pyparsing~=3.1.2",

    # Protocols and Serialization
    "grpcio==1.71.0",
    "mypy-protobuf==3.6.0",

    # Database
    "pymongo==4.8.0",
    "redis~=5.2.0",

    # Distributed Computing
    "ray~=2.34.0",
    "pyspark~=3.5.3",

    # Monitoring and Logging
    "wandb==0.18.7",

    # Visualization
    "streamlit==1.39.0",

    # External services
    "fireworks-ai~=0.15.7",
    "requests-aws4auth==1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.cmdclass]
build_py = "custom_build.BuildPyCommand"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**/*"]
